# chess_sharp_dart

./: CHANGELOG.md  README.md  benchmark_perft.dart  benchmark_simple.dart  perft_debug_output.txt  pubspec.yaml  test_bits.dart  test_last_chance.dart  test_popcnt.dart  test_trunc.dart  test_trunc_final.dart  test_trunc_final_final.dart  test_trunc_hex.dart  utils_test.dart
android/: build.gradle.kts
android/app/src/main/cpp/: CMakeLists.txt  bridge.cpp
android/app/src/main/cpp/engine_src/: movepick.cpp  position.cpp  position.h  search.cpp  uci.cpp  uci.h  variant.cpp  web_main.cpp
benchmark/: dartchess_benchmark.dart
data/: 2022-03-24 DB v John.pgn  2023-03-09 Raphael v DB.pgn  2023-04-17 DB v Jim.pgn  2023-04-20 DB v Raphael.pgn  2023-04-21 DB v Hudson.pgn  2023-04-24 Jim v DB.pgn  2023-05-01 Jim v DB.pgn  2023-05-01 Jim v DB2.pgn  2023-05-13 David Bergan v Jim Wynstra.pgn  2023-05-13 David Bergan v Raphael Neff.pgn  2023-05-13 Jim Wynstra v Michael Bergan.pgn  2023-05-13 John Bergan v Carlos Casanova.pgn  2023-05-13 John Bergan v Joseph Wynstra.pgn  2023-05-13 Michael Bergan v David Bergan.pgn  2023-05-13 Raphael Neff v Jim Wynstra.pgn  2023-05-13 Raphael Neff v Michael Bergan.pgn  2023-05-13 William Ristau v John Bergan.pgn  2023-06-12 Jim Wynstra v David Bergan.pgn  2023-08-15 Jack v Owen Chaplain.pgn  2023-08-17 Jack v Ethan.pgn  2023-10-02 David Bergan v Jim Wynstra.pgn  2023-10-21 David Bergan v Elliott Neff.pgn  2023-12-13 David Bergan v Jerry Bergan.pgn  2024-01-20 Jim Wynstra v David Bergan.pgn  2024-03-03 Chess Double Flat.pgn  (+1 more)
example/: perft.dart  (+2 more)
(+75 files in other folders)
